<resources>
    <string name="app_name">RitrattoLinguistico</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Language Portrait</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ritrattolinguisticobutton">Language Portrait</string>
    <string name="giardinolinguisticobutton">Language Garden</string>
    <string name="altrerisorse">Other Resources</string>
    <string name="scopridipiùbutton">More</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="new_selected_color">Selected color</string>
    <string name="stroke">Stroke:</string>
    <string name="assign_color_title">Assign a Color</string>
    <string name="assign_language_to_color">Assign a language to this color</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="choose_language_title">Choose Languages</string>
    <string name="msg_choose_language_title">Select languages spoken in family</string>
    <string name="family_languages">Family Languages</string>
    <string name="ritratto_saved">Your Linguistic portrait has been saved</string>
    <string name="no_image_detected">No image detected</string>
    <string name="btn_close">Close</string>
    <string name="in_lang">In</string>
    <string name="translated_word_is" formatted="false">%s in %s is %s</string>
    <string name="write_translation" formatted="false">Write %s in %s</string>
    <string name="btn_modify">Update</string>
    <string name="btn_write">Write</string>
    <string name="btnSave">Save</string>
    <string name="consapevolezza_linguistica">Linquistic awareness\n Discover the benefits of plurilingualism and improve your family\'s language awareness</string>
    <string name="identita_linguistica">Linguistic identity\n Encourage the discovery of your child\'s linguistic and cultural identity</string>
    <string name="lessico_plurilinguistico">The multilingual lexicon at your fingertips</string>
    <string name="how_to_create_portrait">How to create your Portrait</string>
    <string name="giardino_linguistico">Language Garden</string>
    <string name="sistemi_di_scrittura">Other resources</string>
    <string name="scopri_di_piu">Discover more</string>
    <string name="zone_cucina">Kitchen</string>
    <string name="zone_salotto">Parlour</string>
    <string name="zone_bagno">Bathroom</string>
    <string name="zone_camera_da_letto">Bedroom</string>
    <string name="more_title_1">Cosa troverai in questa sezione?</string>
    <string name="more_title_2">Bilinguismo/multilinguismo/plurilinguismo</string>
    <string name="more_title_3">Multilinguismo individuale/sociale</string>
    <string name="more_title_4">Condizioni per una competenza bilingue/plurilingue</string>
    <string name="more_title_5">Periodo critico</string>
    <string name="more_title_6">Tipi di bilinguismo</string>
    <string name="more_title_7">Bilinguismo/plurilinguismo e il mescolamento dei codici</string>
    <string name="more_title_8">Vantaggi del bi-plurilinguismo</string>
    <string name="more_title_9">Politica linguistica familiare (PLF)</string>
    <string name="more_title_10">Tipi di strategie di trasmissione linguistica</string>
    <string name="more_title_11">Strategie comunicative nel caso del code mixing o switching</string>
    <string name="more_desc_1_first">1). Spiegazioni sul bilinguismo/plurilinguismo\n 2). Vantaggi della competenza plurilingue</string>
    <string name="more_desc_1_second">3). Tipi di bilinguismo\n 4). Il concetto della politica linguistica familiare\n 5). Strategie di gestione della lingue in famiglia</string>
    <string name="more_desc_2_first">Il termine bilinguismo è spesso adottato in modo generico nella comunicazione quotidiana e denota chiunque conosca due lingue o due dialetti.</string>
    <string name="more_desc_2_second">Multilinguismo fa riferimento alla presenza di più di una lingua o dialetti in una stessa area geografica. Gli individui che vivono in aree geografiche multilingui possono essere plurilingui o monolingui, cioè, parlare soltanto una delle lingue presenti sul territorio.\n È bilingue/plurilingue chiunque possegga competenze in lingue diverse anche se diseguali e non necessariamente frutto dell’essere nati da genitori parlanti lingue differenti. Il bilinguismo/plurilinguismo, quindi, non descrive solo chi ha una competenza bilanciata delle due lingue e parla entrambe allo stesso livello: è bilingue anche chi ha una lingua dominante e un\’altra che viene usata solo in specifiche circostanze. Il concetto in questione si riferisce anche agli adulti che imparano una seconda o una terza lingua, senza esservi stati esposti dalla tenera età.</string>
    <string name="more_desc_3_first">NADA</string>
    <string name="more_desc_3_second">NADA</string>
    <string name="more_desc_4_first">1). Il contesto familiare in cui si parlano lingue diverse e si è sottoposti a stimoli continui e diversificati in questi due o più idiomi</string>
    <string name="more_desc_4_second">2). La società, ovvero la presenza o meno del bilinguismo/plurilinguismo nella propria comunità. 3). I fattori personali come motivazione, attitudine, carattere, impegno. 4). L’età di acquisizione delle lingue</string>
    <string name="more_desc_5_first">Periodo biologico a disposizione per l\’apprendimento del linguaggio. Si ritiene che dopo la pubertà il funzionamento del cervello linguistico sia diverso nell\’imparare una seconda o terza lingua</string>
    <string name="more_desc_5_second"> </string>
    <string name="more_desc_6_first_top">Bilinguismo simultaneo precoce</string>
    <string name="more_desc_6_first_bottom">caratterizza l\’individuo che ha imparato più di una lingua simultaneamente sin dalla nascita o che è stato esposto a un\'altra lingua entro il primo anno di vita. Ne è l\’esempio l\’individuo che cresce in un unico ambiente familiare in cui sono presenti lingue diverse. Si sottolinea che, per attivare forme di bilinguismo simultaneo, l\’esposizione a due lingue deve essere di pari intensità</string>
    <string name="more_desc_6_second_top">Bilinguismo composito precoce</string>
    <string name="more_desc_6_second_bottom">questa forma appartiene a coloro che apprendono due lingue a partire dalla tenerissima età ma con un distacco temporale di uno o due anni tra la prima e la seconda lingua appresa. È il caso tipico di coloro che parlano una lingua in famiglia che non è quella parlata nella società che li ospita e quindi entreranno in contatto con il nuovo idioma solo quando inizieranno le interazioni sistematiche e autonome con l\’esterno, quindi a scuola o con gli amici</string>
    <string name="more_desc_6_third_top">Bilinguismo composito tardivo</string>
    <string name="more_desc_6_third_bottom">se una delle due lingue è appresa dopo i 4/5 anni (l\’età di esposizione comunicativa, quando un bambino inizia a produrre enunciati complessi con un numero alto di parole riconosciute e usate), ma prima dell\’inizio della pubertà (l\’età considerata una soglia critica, passata la quale per alcuni diventa quasi impossibile arrivare a una piena competenza in una lingua)</string>
    <string name="more_desc_6_forth_top">Bilinguismo da adulti tardivo e non bilanciato</string>
    <string name="more_desc_6_forth_bottom">caratterizza coloro che hanno avviato l\’apprendimento della seconda lingua dopo l\’apprendimento della prima lingua. Non sono rari i casi di persone che imparano la lingua a livelli nativi anche da adulti. Spesso il bilinguismo tardivo è associato all\’accento non nativo</string>
    <string name="more_desc_6_fifth_top">Bilinguismo ricettivo</string>
    <string name="more_desc_6_fifth_bottom">caratterizza coloro che comprendono una seconda lingua in forma scritta e/o orale ma non necessariamente in grado di produrre parole o frasi in tale idioma</string>
    <string name="more_desc_6_sixth_top">Bilinguismo additivo</string>
    <string name="more_desc_6_sixth_bottom">la nuova lingua si sviluppa accanto a quella materna. Entrambe coesistono in un rapporto di complementarità ed evoluzione reciproca e sono viste in maniera positiva</string>
    <string name="more_desc_6_seventh_top">Bilinguismo sottrattivo</string>
    <string name="more_desc_6_seventh_bottom">la nuova lingua è ritenuta più prestigiosa e si sviluppa a discapito della madrelingua, che è soggetta a perdita graduale e parziale.</string>
    <string name="more_desc_6_eighth_top">Bilinguismo bilanciato</string>
    <string name="more_desc_6_eighth_bottom">implica lo stesso livello di fluenza e competenza nelle due lingue conosciute. Ad esempio, si è in presenza di bilinguismo bilanciato se una persona bilingue mantiene relazioni e contatti con la propria comunità di origine, mentre utilizza nel quotidiano la lingua della comunità ospitante</string>
    <string name="more_desc_6_ninth_top">Bilinguismo dominante</string>
    <string name="more_desc_6_ninth_bottom">implica la preferenza di un idioma sull\’altro</string>
    <string name="more_contents_title_siti_web">Altri contenuti</string>
    <string name="more_content_link1"><a href="https://www.helpmykidlearn.ie/">Help my kid learn</a></string>
    <string name="more_content_link1_def">Giochi per i bambini da 0 a 12 anni:</string>
    <string name="more_content_link2"><a href="https://www.ecml.at/">ECML</a></string>
    <string name="more_content_link2_def">Centro europeo per le lingue moderne:</string>
    <string name="more_content_link3"><a href="https://sms-project.eurac.edu/scuole/materiali-didattici/?lang=it">Eurac Research</a></string>
    <string name="more_content_link3_def">Attività didattiche per i bambini:</string>
    <string name="more_contents_title2">Libri</string>
    <string name="more_content_link4"><a href="https://www.google.com/search?q=M.+Citterio+%281999%29+%E2%80%9CCome+favorire+il+bilinguismo+dei+bambini&amp;client=firefox-b-d&amp;sca_esv=594569564&amp;ei=t-WPZdzLPP2Lxc8Ppf6r8AM&amp;ved=0ahUKEwicg-uX77aDAxX9RfEDHSX_Cj4Q4dUDCBA&amp;uact=5&amp;oq=M.+Citterio+%281999%29+%E2%80%9CCome+favorire+il+bilinguismo+dei+bambini&amp;gs_lp=Egxnd3Mtd2l6LXNlcnAiPk0uIENpdHRlcmlvICgxOTk5KSDigJxDb21lIGZhdm9yaXJlIGlsIGJpbGluZ3Vpc21vIGRlaSBiYW1iaW5pMggQABiABBiiBEjZB1CcBVicBXABeACQAQCYAdgBoAHYAaoBAzItMbgBA8gBAPgBAfgBAqgCCsICFhAAGAMYjwEY5QIY6gIYtAIYjAPYAQHCAhYQLhgDGI8BGOUCGOoCGLQCGIwD2AEB4gMEGAAgQYgGAboGBAgBGAo&amp;sclient=gws-wiz-serp">M. Citterio (1999) “Come favorire il bilinguismo dei bambini”</a></string>
    <string name="more_content_link5"><a href="https://www.google.com/search?client=firefox-b-d&amp;q=Maria+Garraffa%2C+Antonella+Sorace%2C+Maria+Vender+%282020%29+%E2%80%9CIl+cervello+bilingue">Maria Garraffa, Antonella Sorace, Maria Vender (2020) “Il cervello bilingue”</a></string>
    <string name="more_content_link6"><a href="https://books.google.it/books/about/Il_bilinguismo_in_et%C3%A0_evolutiva_Aspetti.html?id=THVcywEACAAJ&amp;redir_esc=y">Andrea Marini, M. Chiara Levorato (2019) “Il bilinguismo in età evolutiva. Aspetti cognitivi, linguistici, neuropsicologici, educativi”</a></string>
    <string name="more_contents_title3">Altre applicazioni</string>
    <string name="more_content_link7"><a href="https://play.google.com/store/apps/details?id=com.languagedrops.drops.international">Drops</a></string>
    <string name="more_content_link8"><a href="https://n9cjb.app.goo.gl/bjYm">Beelinguapp</a></string>
    <string name="more_content_link9"><a href="https://play.google.com/store/apps/details?id=es.monkimun.lingokids">Lingokids</a></string>
</resources>