<?xml version="1.0" encoding="utf-8"?>
<!-- activity_main.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    card_view:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/notoserif_bold"
                            android:text="@string/more_contents_title_siti_web">
                        </TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/more_content_label1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColor="#80000000"
                                android:text="@string/more_content_link1_def">
                            </TextView>
                            <TextView
                                android:id="@+id/more_content_link1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColorLink="@color/Blue"
                                android:text="@string/more_content_link1">
                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/more_content_label2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColor="#80000000"
                                android:text="@string/more_content_link2_def">
                            </TextView>
                            <TextView
                                android:id="@+id/more_content_link2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColorLink="@color/Blue"
                                android:text="@string/more_content_link2">
                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/more_content_label3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColor="#80000000"
                                android:text="@string/more_content_link3_def">
                            </TextView>
                            <TextView
                                android:id="@+id/more_content_link3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColorLink="@color/Blue"
                                android:text="@string/more_content_link3">
                            </TextView>
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    card_view:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/notoserif_bold"
                            android:text="@string/more_contents_title2">
                        </TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/more_content_link4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColorLink="@color/Blue"
                                android:text="@string/more_content_link4">
                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/more_content_link5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColorLink="@color/Blue"
                                android:text="@string/more_content_link5">
                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/more_content_link6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColorLink="@color/Blue"
                                android:text="@string/more_content_link6">
                            </TextView>
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    card_view:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/notoserif_bold"
                            android:text="@string/more_contents_title3">
                        </TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/more_content_link7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColorLink="@color/Blue"
                                android:text="@string/more_content_link7">
                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/more_content_link8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColorLink="@color/Blue"
                                android:text="@string/more_content_link8">
                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/more_content_link9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15sp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColorLink="@color/Blue"
                                android:text="@string/more_content_link9">
                            </TextView>
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>